# helloworld

./: .bazelrc  MODULE.bazel  hello.c
foo/: BUILD  foo.c
